# clickup-pdf-generator

./: .gitignore  README.md  clickup-pdf-generator.7z  clickup_parser.py  fetch_clickup_task.py  generate_pdf.py  make_pdfs.py  pyproject.toml  renderers.py  styles.py  task_data.json  utils.py
src/cli/: make_pdfs.py
src/pdf_generator/: clickup_parser.py  generate_pdf.py  renderers.py  styles.py  utils.py
